// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SleepComponent renders correctly 1`] = `
<View>
  <View
    forwardedRef={[Function]}
    style={
      Object {
        "opacity": 0,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "textAlign": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "transparent",
                "borderRadius": 100,
                "borderStyle": "dotted",
                "borderWidth": 3,
                "padding": 2,
              },
              "",
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#ff9a55",
                "borderRadius": 100,
                "height": 54,
                "justifyContent": "center",
                "width": 54,
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#2089dc",
                    "borderRadius": 3,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "padding": 8,
                  }
                }
              >
                <Text />
              </View>
            </View>
          </View>
        </View>
        <Text
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "color": "#87BCBF",
              "fontFamily": "Helvetica",
              "fontSize": 17,
              "textAlign": "center",
            }
          }
          theme={
            Object {
              "colors": Object {
                "disabled": "hsl(208, 8%, 90%)",
                "divider": "#bcbbc1",
                "error": "#ff190c",
                "grey0": "#393e42",
                "grey1": "#43484d",
                "grey2": "#5e6977",
                "grey3": "#86939e",
                "grey4": "#bdc6cf",
                "grey5": "#e1e8ee",
                "greyOutline": "#bbb",
                "platform": Object {
                  "android": Object {
                    "error": "#f44336",
                    "primary": "#2196f3",
                    "secondary": "#9C27B0",
                    "success": "#4caf50",
                    "warning": "#ffeb3b",
                  },
                  "ios": Object {
                    "error": "#ff3b30",
                    "primary": "#007aff",
                    "secondary": "#5856d6",
                    "success": "#4cd964",
                    "warning": "#ffcc00",
                  },
                },
                "primary": "#2089dc",
                "searchBg": "#303337",
                "secondary": "#8F0CE8",
                "success": "#52c41a",
                "warning": "#faad14",
              },
            }
          }
        >
          Restful
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "textAlign": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "transparent",
                "borderRadius": 100,
                "borderStyle": "dotted",
                "borderWidth": 3,
                "padding": 2,
              },
              "",
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#009898",
                "borderRadius": 100,
                "height": 54,
                "justifyContent": "center",
                "width": 54,
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#2089dc",
                    "borderRadius": 3,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "padding": 8,
                  }
                }
              >
                <Text />
              </View>
            </View>
          </View>
        </View>
        <Text
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "color": "#87BCBF",
              "fontFamily": "Helvetica",
              "fontSize": 17,
              "textAlign": "center",
            }
          }
          theme={
            Object {
              "colors": Object {
                "disabled": "hsl(208, 8%, 90%)",
                "divider": "#bcbbc1",
                "error": "#ff190c",
                "grey0": "#393e42",
                "grey1": "#43484d",
                "grey2": "#5e6977",
                "grey3": "#86939e",
                "grey4": "#bdc6cf",
                "grey5": "#e1e8ee",
                "greyOutline": "#bbb",
                "platform": Object {
                  "android": Object {
                    "error": "#f44336",
                    "primary": "#2196f3",
                    "secondary": "#9C27B0",
                    "success": "#4caf50",
                    "warning": "#ffeb3b",
                  },
                  "ios": Object {
                    "error": "#ff3b30",
                    "primary": "#007aff",
                    "secondary": "#5856d6",
                    "success": "#4cd964",
                    "warning": "#ffcc00",
                  },
                },
                "primary": "#2089dc",
                "searchBg": "#303337",
                "secondary": "#8F0CE8",
                "success": "#52c41a",
                "warning": "#faad14",
              },
            }
          }
        >
          Interrupted
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "textAlign": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "transparent",
                "borderRadius": 100,
                "borderStyle": "dotted",
                "borderWidth": 3,
                "padding": 2,
              },
              "",
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#517fa4",
                "borderRadius": 100,
                "height": 54,
                "justifyContent": "center",
                "width": 54,
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#2089dc",
                    "borderRadius": 3,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "padding": 8,
                  }
                }
              >
                <Text />
              </View>
            </View>
          </View>
        </View>
        <Text
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "color": "#87BCBF",
              "fontFamily": "Helvetica",
              "fontSize": 17,
              "textAlign": "center",
            }
          }
          theme={
            Object {
              "colors": Object {
                "disabled": "hsl(208, 8%, 90%)",
                "divider": "#bcbbc1",
                "error": "#ff190c",
                "grey0": "#393e42",
                "grey1": "#43484d",
                "grey2": "#5e6977",
                "grey3": "#86939e",
                "grey4": "#bdc6cf",
                "grey5": "#e1e8ee",
                "greyOutline": "#bbb",
                "platform": Object {
                  "android": Object {
                    "error": "#f44336",
                    "primary": "#2196f3",
                    "secondary": "#9C27B0",
                    "success": "#4caf50",
                    "warning": "#ffeb3b",
                  },
                  "ios": Object {
                    "error": "#ff3b30",
                    "primary": "#007aff",
                    "secondary": "#5856d6",
                    "success": "#4cd964",
                    "warning": "#ffcc00",
                  },
                },
                "primary": "#2089dc",
                "searchBg": "#303337",
                "secondary": "#8F0CE8",
                "success": "#52c41a",
                "warning": "#faad14",
              },
            }
          }
        >
          Poor
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "display": "none",
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
          "margin": 11,
          "marginBottom": 0,
        },
        Object {
          "backgroundColor": "#FFFFFF10",
          "borderColor": "#FFFFFF50",
          "borderRadius": 40,
          "borderWidth": 1,
          "margin": 3,
          "paddingHorizontal": 11,
          "paddingVertical": 11,
        },
        Object {
          "alignSelf": "center",
          "marginBottom": 21,
          "marginTop": 31,
          "paddingHorizontal": 16,
          "paddingVertical": 11,
          "textAlign": "center",
          "width": 322,
        },
      ]
    }
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "justifyContent": "center",
          }
        }
        theme={
          Object {
            "colors": Object {
              "disabled": "hsl(208, 8%, 90%)",
              "divider": "#bcbbc1",
              "error": "#ff190c",
              "grey0": "#393e42",
              "grey1": "#43484d",
              "grey2": "#5e6977",
              "grey3": "#86939e",
              "grey4": "#bdc6cf",
              "grey5": "#e1e8ee",
              "greyOutline": "#bbb",
              "platform": Object {
                "android": Object {
                  "error": "#f44336",
                  "primary": "#2196f3",
                  "secondary": "#9C27B0",
                  "success": "#4caf50",
                  "warning": "#ffeb3b",
                },
                "ios": Object {
                  "error": "#ff3b30",
                  "primary": "#007aff",
                  "secondary": "#5856d6",
                  "success": "#4cd964",
                  "warning": "#ffcc00",
                },
              },
              "primary": "#2089dc",
              "searchBg": "#303337",
              "secondary": "#8F0CE8",
              "success": "#52c41a",
              "warning": "#faad14",
            },
          }
        }
        underlayColor="white"
      >
        <Text />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 0.8,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 2,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "center",
            }
          }
        >
          <View>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#87BCBF",
                      "fontFamily": "Helvetica",
                      "fontSize": 17,
                    },
                    Object {
                      "marginHorizontal": 11,
                    },
                    undefined,
                  ]
                }
              >
                Bed time:
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "justifyContent": "center",
          }
        }
        theme={
          Object {
            "colors": Object {
              "disabled": "hsl(208, 8%, 90%)",
              "divider": "#bcbbc1",
              "error": "#ff190c",
              "grey0": "#393e42",
              "grey1": "#43484d",
              "grey2": "#5e6977",
              "grey3": "#86939e",
              "grey4": "#bdc6cf",
              "grey5": "#e1e8ee",
              "greyOutline": "#bbb",
              "platform": Object {
                "android": Object {
                  "error": "#f44336",
                  "primary": "#2196f3",
                  "secondary": "#9C27B0",
                  "success": "#4caf50",
                  "warning": "#ffeb3b",
                },
                "ios": Object {
                  "error": "#ff3b30",
                  "primary": "#007aff",
                  "secondary": "#5856d6",
                  "success": "#4cd964",
                  "warning": "#ffcc00",
                },
              },
              "primary": "#2089dc",
              "searchBg": "#303337",
              "secondary": "#8F0CE8",
              "success": "#52c41a",
              "warning": "#faad14",
            },
          }
        }
        underlayColor="white"
      >
        <Text />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 0.8,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 2,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "center",
            }
          }
        >
          <View>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#87BCBF",
                      "fontFamily": "Helvetica",
                      "fontSize": 17,
                    },
                    Object {
                      "marginHorizontal": 11,
                    },
                    undefined,
                  ]
                }
              >
                Wake time:
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`SleepComponent renders correctly 2`] = `
<View>
  <View
    forwardedRef={[Function]}
    style={
      Object {
        "opacity": 0,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "textAlign": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "transparent",
                "borderRadius": 100,
                "borderStyle": "dotted",
                "borderWidth": 3,
                "padding": 2,
              },
              "",
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#ff9a55",
                "borderRadius": 100,
                "height": 54,
                "justifyContent": "center",
                "width": 54,
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#2089dc",
                    "borderRadius": 3,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "padding": 8,
                  }
                }
              >
                <Text />
              </View>
            </View>
          </View>
        </View>
        <Text
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "color": "#87BCBF",
              "fontFamily": "Helvetica",
              "fontSize": 17,
              "textAlign": "center",
            }
          }
          theme={
            Object {
              "colors": Object {
                "disabled": "hsl(208, 8%, 90%)",
                "divider": "#bcbbc1",
                "error": "#ff190c",
                "grey0": "#393e42",
                "grey1": "#43484d",
                "grey2": "#5e6977",
                "grey3": "#86939e",
                "grey4": "#bdc6cf",
                "grey5": "#e1e8ee",
                "greyOutline": "#bbb",
                "platform": Object {
                  "android": Object {
                    "error": "#f44336",
                    "primary": "#2196f3",
                    "secondary": "#9C27B0",
                    "success": "#4caf50",
                    "warning": "#ffeb3b",
                  },
                  "ios": Object {
                    "error": "#ff3b30",
                    "primary": "#007aff",
                    "secondary": "#5856d6",
                    "success": "#4cd964",
                    "warning": "#ffcc00",
                  },
                },
                "primary": "#2089dc",
                "searchBg": "#303337",
                "secondary": "#8F0CE8",
                "success": "#52c41a",
                "warning": "#faad14",
              },
            }
          }
        >
          Restful
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "textAlign": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "transparent",
                "borderRadius": 100,
                "borderStyle": "dotted",
                "borderWidth": 3,
                "padding": 2,
              },
              Object {
                "borderColor": "#FFFFFF",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#009898",
                "borderRadius": 100,
                "height": 54,
                "justifyContent": "center",
                "width": 54,
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#2089dc",
                    "borderRadius": 3,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "padding": 8,
                  }
                }
              >
                <Text />
              </View>
            </View>
          </View>
        </View>
        <Text
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "color": "#87BCBF",
              "fontFamily": "Helvetica",
              "fontSize": 17,
              "textAlign": "center",
            }
          }
          theme={
            Object {
              "colors": Object {
                "disabled": "hsl(208, 8%, 90%)",
                "divider": "#bcbbc1",
                "error": "#ff190c",
                "grey0": "#393e42",
                "grey1": "#43484d",
                "grey2": "#5e6977",
                "grey3": "#86939e",
                "grey4": "#bdc6cf",
                "grey5": "#e1e8ee",
                "greyOutline": "#bbb",
                "platform": Object {
                  "android": Object {
                    "error": "#f44336",
                    "primary": "#2196f3",
                    "secondary": "#9C27B0",
                    "success": "#4caf50",
                    "warning": "#ffeb3b",
                  },
                  "ios": Object {
                    "error": "#ff3b30",
                    "primary": "#007aff",
                    "secondary": "#5856d6",
                    "success": "#4cd964",
                    "warning": "#ffcc00",
                  },
                },
                "primary": "#2089dc",
                "searchBg": "#303337",
                "secondary": "#8F0CE8",
                "success": "#52c41a",
                "warning": "#faad14",
              },
            }
          }
        >
          Interrupted
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "textAlign": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderColor": "transparent",
                "borderRadius": 100,
                "borderStyle": "dotted",
                "borderWidth": 3,
                "padding": 2,
              },
              "",
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#517fa4",
                "borderRadius": 100,
                "height": 54,
                "justifyContent": "center",
                "width": 54,
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#2089dc",
                    "borderRadius": 3,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "padding": 8,
                  }
                }
              >
                <Text />
              </View>
            </View>
          </View>
        </View>
        <Text
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "color": "#87BCBF",
              "fontFamily": "Helvetica",
              "fontSize": 17,
              "textAlign": "center",
            }
          }
          theme={
            Object {
              "colors": Object {
                "disabled": "hsl(208, 8%, 90%)",
                "divider": "#bcbbc1",
                "error": "#ff190c",
                "grey0": "#393e42",
                "grey1": "#43484d",
                "grey2": "#5e6977",
                "grey3": "#86939e",
                "grey4": "#bdc6cf",
                "grey5": "#e1e8ee",
                "greyOutline": "#bbb",
                "platform": Object {
                  "android": Object {
                    "error": "#f44336",
                    "primary": "#2196f3",
                    "secondary": "#9C27B0",
                    "success": "#4caf50",
                    "warning": "#ffeb3b",
                  },
                  "ios": Object {
                    "error": "#ff3b30",
                    "primary": "#007aff",
                    "secondary": "#5856d6",
                    "success": "#4cd964",
                    "warning": "#ffcc00",
                  },
                },
                "primary": "#2089dc",
                "searchBg": "#303337",
                "secondary": "#8F0CE8",
                "success": "#52c41a",
                "warning": "#faad14",
              },
            }
          }
        >
          Poor
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
          "margin": 11,
          "marginBottom": 0,
        },
        Object {
          "backgroundColor": "#FFFFFF10",
          "borderColor": "#FFFFFF50",
          "borderRadius": 40,
          "borderWidth": 1,
          "margin": 3,
          "paddingHorizontal": 11,
          "paddingVertical": 11,
        },
        Object {
          "alignSelf": "center",
          "marginBottom": 21,
          "marginTop": 31,
          "paddingHorizontal": 16,
          "paddingVertical": 11,
          "textAlign": "center",
          "width": 322,
        },
      ]
    }
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "justifyContent": "center",
          }
        }
        theme={
          Object {
            "colors": Object {
              "disabled": "hsl(208, 8%, 90%)",
              "divider": "#bcbbc1",
              "error": "#ff190c",
              "grey0": "#393e42",
              "grey1": "#43484d",
              "grey2": "#5e6977",
              "grey3": "#86939e",
              "grey4": "#bdc6cf",
              "grey5": "#e1e8ee",
              "greyOutline": "#bbb",
              "platform": Object {
                "android": Object {
                  "error": "#f44336",
                  "primary": "#2196f3",
                  "secondary": "#9C27B0",
                  "success": "#4caf50",
                  "warning": "#ffeb3b",
                },
                "ios": Object {
                  "error": "#ff3b30",
                  "primary": "#007aff",
                  "secondary": "#5856d6",
                  "success": "#4cd964",
                  "warning": "#ffcc00",
                },
              },
              "primary": "#2089dc",
              "searchBg": "#303337",
              "secondary": "#8F0CE8",
              "success": "#52c41a",
              "warning": "#faad14",
            },
          }
        }
        underlayColor="white"
      >
        <Text />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 0.8,
        }
      }
    >
      <View
        style={
          Object {
            "justifyContent": "center",
          }
        }
      >
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#87BCBF",
                    "fontFamily": "Helvetica",
                    "fontSize": 17,
                  },
                  Object {
                    "marginHorizontal": 11,
                  },
                  undefined,
                ]
              }
            >
              déc. 22
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "height": 6,
            },
          ]
        }
      />
      <View
        style={
          Object {
            "flex": 2,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "center",
            }
          }
        >
          <View>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#87BCBF",
                      "fontFamily": "Helvetica",
                      "fontSize": 17,
                    },
                    Object {
                      "marginHorizontal": 11,
                    },
                    undefined,
                  ]
                }
              >
                07:36
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "justifyContent": "center",
          }
        }
        theme={
          Object {
            "colors": Object {
              "disabled": "hsl(208, 8%, 90%)",
              "divider": "#bcbbc1",
              "error": "#ff190c",
              "grey0": "#393e42",
              "grey1": "#43484d",
              "grey2": "#5e6977",
              "grey3": "#86939e",
              "grey4": "#bdc6cf",
              "grey5": "#e1e8ee",
              "greyOutline": "#bbb",
              "platform": Object {
                "android": Object {
                  "error": "#f44336",
                  "primary": "#2196f3",
                  "secondary": "#9C27B0",
                  "success": "#4caf50",
                  "warning": "#ffeb3b",
                },
                "ios": Object {
                  "error": "#ff3b30",
                  "primary": "#007aff",
                  "secondary": "#5856d6",
                  "success": "#4cd964",
                  "warning": "#ffcc00",
                },
              },
              "primary": "#2089dc",
              "searchBg": "#303337",
              "secondary": "#8F0CE8",
              "success": "#52c41a",
              "warning": "#faad14",
            },
          }
        }
        underlayColor="white"
      >
        <Text />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 0.8,
        }
      }
    >
      <View
        style={
          Object {
            "justifyContent": "center",
          }
        }
      >
        <View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#87BCBF",
                    "fontFamily": "Helvetica",
                    "fontSize": 17,
                  },
                  Object {
                    "marginHorizontal": 11,
                  },
                  undefined,
                ]
              }
            >
              janv. 1
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "height": 6,
            },
          ]
        }
      />
      <View
        style={
          Object {
            "flex": 2,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "justifyContent": "center",
            }
          }
        >
          <View>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#87BCBF",
                      "fontFamily": "Helvetica",
                      "fontSize": 17,
                    },
                    Object {
                      "marginHorizontal": 11,
                    },
                    undefined,
                  ]
                }
              >
                07:30
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`SleepComponent renders correctly 3`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": 11,
      "paddingLeft": 22,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "textAlign": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "textAlign": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "borderColor": "transparent",
              "borderRadius": 100,
              "borderStyle": "dotted",
              "borderWidth": 3,
              "padding": 2,
            },
            "",
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 100,
                "height": 54,
                "justifyContent": "center",
                "width": 54,
              },
              Object {
                "backgroundColor": "#009898",
              },
              undefined,
            ]
          }
        >
          <Text />
        </View>
      </View>
      <Text
        style={
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "color": "#324755",
            "fontFamily": "Helvetica",
            "fontSize": 17,
            "textAlign": "center",
          }
        }
        theme={
          Object {
            "colors": Object {
              "disabled": "hsl(208, 8%, 90%)",
              "divider": "#bcbbc1",
              "error": "#ff190c",
              "grey0": "#393e42",
              "grey1": "#43484d",
              "grey2": "#5e6977",
              "grey3": "#86939e",
              "grey4": "#bdc6cf",
              "grey5": "#e1e8ee",
              "greyOutline": "#bbb",
              "platform": Object {
                "android": Object {
                  "error": "#f44336",
                  "primary": "#2196f3",
                  "secondary": "#9C27B0",
                  "success": "#4caf50",
                  "warning": "#ffeb3b",
                },
                "ios": Object {
                  "error": "#ff3b30",
                  "primary": "#007aff",
                  "secondary": "#5856d6",
                  "success": "#4cd964",
                  "warning": "#ffcc00",
                },
              },
              "primary": "#2089dc",
              "searchBg": "#303337",
              "secondary": "#8F0CE8",
              "success": "#52c41a",
              "warning": "#faad14",
            },
          }
        }
      >
        Interrupted
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#FFFFFF70",
            "fontFamily": "Helvetica",
            "fontSize": 20,
          },
          Object {
            "color": "#324755",
          },
        ]
      }
    >
      Bed time:7:36 AM
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#FFFFFF70",
            "fontFamily": "Helvetica",
            "fontSize": 20,
          },
          Object {
            "color": "#324755",
          },
        ]
      }
    >
      Wake time:7:30 AM
    </Text>
  </View>
</View>
`;

exports[`SleepComponent renders correctly 4`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "textAlign": "center",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "borderColor": "transparent",
          "borderRadius": 100,
          "borderStyle": "dotted",
          "borderWidth": 3,
          "padding": 2,
        },
        "",
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 54,
            "justifyContent": "center",
            "width": 54,
          },
          Object {
            "backgroundColor": "#009898",
          },
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 100,
              "height": 26,
              "justifyContent": "center",
              "width": 26,
            },
            Object {
              "margin": -2,
            },
          ],
        ]
      }
    >
      <Text />
    </View>
  </View>
</View>
`;
